feat: implemented register new account
created service and controller  for auth
wrote test codes for register controller
updated the api documentation

next: implement login system
