# packages/server-api/src/api/docs/swagger.json
@@ -13,34 +13,46 @@
   "basePath": "/api/v1",
   "tags": [
     {
-      "name": "Users",
-      "description": "API for the users in the system"
+      "name": "Auth",
+      "description": "API for the authentication in the system"
     }
   ],
   "schemas": ["http"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
-    "/users": {
+    "/auth/register": {
       "post": {
-        "tags": [ "Users" ],
-        "description": "Create new user in the system",
+        "tags": [ "Auth" ],
+        "description": "Create new account in the system",
         "parameters": [
           {
-            "name": "user",
+            "name": "auth",
             "in": "body",
-            "description": "User that you want to create",
+            "description": "Account that you want to create",
             "schema": {
-              "$ref": "#/definitions/UserPostRequestModel"
+              "$ref": "#/definitions/RegisterRequestModel"
             }
           }
         ],
         "produces": ["application/json"],
         "responses": {
           "201": {
-            "description": "New user created",
+            "description": "New account created",
             "schema": {
-              "$ref": "#/definitions/UserResponseModel"
+              "$ref": "#/definitions/RegisterResponseModel"
+            }
+          },
+          "400": {
+            "description": "Invalid request body",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponseModel"
+            }
+          },
+          "500": {
+            "description": "Unhandled error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponseModel"
             }
           }
         }
@@ -48,9 +60,21 @@
     }
   },
   "definitions": {
-    "UserPostRequestModel": {
-      "required": ["email", "password", "confirmPassword"],
+    "RegisterRequestModel": {
+      "required": ["lastName", "firstName", "email", "password", "confirmPassword"],
       "properties": {
+        "firstName": {
+          "type": "string",
+          "minLength": 3,
+          "maxLength": 30,
+          "example": "First Name"
+        },
+        "lastName": {
+          "type": "string",
+          "minLength": 3,
+          "maxLength": 30,
+          "example": "Last Name"
+        },
         "email": {
           "type": "string",
           "format": "email",
@@ -68,24 +92,24 @@
         }
       }
     },
-    "UserResponseModel": {
+    "RegisterResponseModel": {
       "properties": {
-        "id": {
-          "type": "objectid",
-          "example": "507f1f77bcf86cd799439011"
-        },
-        "email": {
+        "message": {
           "type": "string",
-          "format": "email",
-          "example": "u001@domain.com"
-        },
-        "updatedAt": {
+          "example": "Account created successfully"
+        }
+      }
+    },
+    "ErrorResponseModel": {
+      "properties": {
+        "name": {
           "type": "string",
-          "example": "2021-02-25T10:03:46.000Z"
+          "definitions": "Error type",
+          "example": "ErrorType"
         },
-        "createdAt": {
+        "message": {
           "type": "string",
-          "example": "2021-02-25T10:03:46.000Z"
+          "example": "An error message"
         }
       }
     }
