# packages/server-api/src/api/models/response-models/user-response-model.js
@@ -1,0 +1,10 @@
+class UserResponseModel {
+  constructor(user) {
+    this.id = user._id;
+    this.email = user.email;
+    this.updatedAt = user.updatedAt;
+    this.createdAt = user.createdAt;
+  }
+}
+
+module.exports = UserResponseModel;
